# ravenbot

./: .gitignore  Cargo.toml  README.md  config.json  key.json  key.txt
actix-gcd/: Cargo.toml
config/: combat.json  config.json  foods.json  hunts.json  skills.json  timer.json  walks.json
config/coordinates/: hog_coord.json  taratugas_coord.json
config/skills/: basic.json  combo.json  defense_full.json  defense_light.json  start.json
src/: checks.rs  checkstats.rs  commands.rs  lib.rs  main.rs
src/utils/: address.rs  env.rs  inputs.rs  mod.rs
