[package]
name = "ravenbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
winapi = { version = "0.3", features = ["psapi", "winuser", "windef", "memoryapi", "processthreadsapi", "winnt", "handleapi", "tlhelp32"] }
tokio = { version = "1", features = ["full"] }
ctrlc = "3.1.9"
libc = "0.2"
chrono = "0.4"

